--- a/src/behaviors/default-resize-behavior.html
+++ b/src/behaviors/default-resize-behavior.html
@@ -18,35 +18,41 @@
       };
       if(this.page==="def-home"){
 
-        var appGridColumns="5";
+        var appGridColumns="6";
         var mainFabPosition="absolute";
         var mainFabTop="140px";
         var mainFabBottom="unset";
+        var suBoxMargin="20px";
         if(dimensions.base.query767){
-          appGridColumns="1";
+          appGridColumns="2";
           mainFabPosition="fixed";
           mainFabTop="unset";
           mainFabBottom="5%";
+          suBoxMargin="5px";
         } else if(dimensions.base.query1023){
-          appGridColumns="2";
-          mainFabPosition="absolute";
-          mainFabTop="140px";
-          mainFabBottom="unset";
-        } else if(dimensions.base.query1365){
           appGridColumns="3";
           mainFabPosition="absolute";
           mainFabTop="140px";
           mainFabBottom="unset";
-        } else if(dimensions.base.query1919){
+          suBoxMargin="30px";
+        } else if(dimensions.base.query1365){
           appGridColumns="4";
           mainFabPosition="absolute";
           mainFabTop="140px";
           mainFabBottom="unset";
+          suBoxMargin="20px";
+        } else if(dimensions.base.query1919){
+          appGridColumns="5";
+          mainFabPosition="absolute";
+          mainFabTop="140px";
+          mainFabBottom="unset";
+          suBoxMargin="30px";
         };
         this.customStyle["--app-grid-columns"]=appGridColumns;
         this.customStyle["--main-fab-position"]=mainFabPosition;
         this.customStyle["--main-fab-top"]=mainFabTop;
         this.customStyle["--main-fab-bottom"]=mainFabBottom;
+        this.customStyle["--su-box-margin"]=suBoxMargin;
         this.updateStyles();
       };
       if(this.page==="def-login"){
