updated pageCard resize behavior for all resize behaviors using new breakpoints and margins. updated su-drawer with new desins.

--- a/src/behaviors/admin-resize-behavior.html
+++ b/src/behaviors/admin-resize-behavior.html
@@ -12,6 +12,20 @@
       "screenChange(dimensions.*)"
     ],
     screenChange:function(dimensions){
+      //general changes
+      var pageCardHorizontalMargin="176px";
+      if(dimensions.base.query767){
+        pageCardHorizontalMargin="0px";
+      } else if(dimensions.base.query1023){
+        pageCardHorizontalMargin="0px";
+      } else if(dimensions.base.query1365){
+        pageCardHorizontalMargin="50px";
+      } else if(dimensions.base.query1919){
+        pageCardHorizontalMargin="164px";
+      };
+      this.customStyle["--page-card-horizontal-margin"]=pageCardHorizontalMargin;
+      this.updateStyles();
+      
       if(this.page==="ad-dash"){
 
       };
