--- a/src/behaviors/default-resize-behavior.html
+++ b/src/behaviors/default-resize-behavior.html
@@ -13,6 +13,20 @@
     ],
     screenChange:function(dimensions){
       //available queries= <=767, <=1023, <=1365, <=1919
+      //general changes
+      var pageCardHorizontalMargin="176px";
+      if(dimensions.base.query767){
+        pageCardHorizontalMargin="0px";
+      } else if(dimensions.base.query1023){
+        pageCardHorizontalMargin="0px";
+      } else if(dimensions.base.query1365){
+        pageCardHorizontalMargin="50px";
+      } else if(dimensions.base.query1919){
+        pageCardHorizontalMargin="164px";
+      };
+      this.customStyle["--page-card-horizontal-margin"]=pageCardHorizontalMargin;
+      this.updateStyles();
+      
       if(this.page==="def-error"){
 
       };
