--- a/src/pages/care-plan/su-care-review/su-care-review.html
+++ b/src/pages/care-plan/su-care-review/su-care-review.html
@@ -2,6 +2,10 @@
 <dom-module id="su-care-review">
 
   <template>
+
+    <media-queries
+      dimensions="{{dimensions}}">
+    </media-queries>
     <!--db query for reviews-->
     <firebase-query
       id="reviewsDB"
