--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -14,6 +14,7 @@
       screenChange:function(dimensions){
         //available queries= <=767, <=1023, <=1365, <=1919
         //general changes
+        console.log("dicks");
         var pageCardHorizontalMargin="176px";
         if(dimensions.base.query767){
           pageCardHorizontalMargin="0px";
@@ -97,7 +98,7 @@
           var mainFabTop="-25px";
           var mainFabBottom="unset";
           var mainFabRight="-25px";
-          if(dimension.base.query767){
+          if(dimensions.base.query767){
             //fab styles
             mainFabPosition="fixed";
             mainFabTop="unset";
