updated guuey element header spacing. removed legacy styling in su-profile and su-pre. updated su-header spacing to design specs. updated resize behavior to use new design spcing for fab.

--- a/src/behaviors/su-resize-behavior.html
+++ b/src/behaviors/su-resize-behavior.html
@@ -33,9 +33,9 @@
           var listWidthHalf="40%";
           var appGridColumns="5";
           var mainFabPosition="absolute";
-          var mainFabTop="-25px";
+          var mainFabTop="-30px";
           var mainFabBottom="unset";
-          var mainFabRight="-25px";
+          var mainFabRight="5%";
 
           if(dimensions.base.query767){
             guueyListFloatRight="unset";
@@ -52,27 +52,27 @@
             listWidthHalf="90%";
             appGridColumns="1";
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
           } else if(dimensions.base.query1365){
             guueyListFloatRight="unset";
             guueyListFloatLeft="unset";
             listWidthHalf="90%";
             appGridColumns="4";
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
           } else if(dimensions.query1919){
             guueyListFloatRight="unset";
             guueyListFloatLeft="unset";
             listWidthHalf="90%";
             appGridColumns="5";
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
           };
           //list styles
           this.customStyle["--guuey-list-float-right"]=guueyListFloatRight;
@@ -95,9 +95,9 @@
           //orig width 640px
           //fab styles
           var mainFabPosition="absolute";
-          var mainFabTop="-25px";
+          var mainFabTop="-30px";
           var mainFabBottom="unset";
-          var mainFabRight="-25px";
+          var mainFabRight="5%";
           if(dimensions.base.query767){
             //fab styles
             mainFabPosition="fixed";
@@ -123,8 +123,8 @@
         if(this.page==="su-goals"){
 
           var mainFabPosition="absolute";
-          var mainFabTop="-25px";
-          var mainFabRight="-25px";
+          var mainFabTop="-30px";
+          var mainFabRight="5%";
           var mainFabBottom="unset";
 
           if(dimensions.base.query767){
@@ -137,23 +137,23 @@
           } else if(dimensions.base.query1023){
 
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
 
           } else if(dimensions.base.query1365){
 
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
 
           } else if(dimensions.base.query1919){
 
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
 
           };
 
@@ -209,9 +209,9 @@
           var tdThLastWidth="unset"
 
           var mainFabPosition="absolute";
-          var mainFabTop="-25px";
+          var mainFabTop="-30px";
           var mainFabBottom="unset";
-          var mainFabRight="-25px";
+          var mainFabRight="5%";
           if(dimensions.base.query767){
             //table style
             tableScrollLabelColor="inherit"
@@ -242,9 +242,9 @@
 
             //fab styles
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
           };
           this.customStyle["--table-scroll-lable-color"]=tableScrollLabelColor;
           this.customStyle["--table-overflow"]=tableOverflow;
@@ -264,9 +264,9 @@
         if(this.page==="su-pre"){
           //uses 640px
             var mainFabPosition="absolute";
-            var mainFabTop="-25px";
+            var mainFabTop="-30px";
             var mainFabBottom="unset";
-            var mainFabRight="-25px";
+            var mainFabRight="5%";
           if(dimensions.base.query767){
             //fab styles
             mainFabPosition="fixed";
@@ -292,8 +292,8 @@
         };
         if(this.page==="su-risk"){
           var mainFabPosition="absolute";
-          var mainFabTop="-25px";
-          var mainFabRight="-25px";
+          var mainFabTop="-30px";
+          var mainFabRight="5%";
           var mainFabBottom="unset";
 
           if(dimensions.base.query767){
@@ -306,23 +306,23 @@
           } else if(dimensions.base.query1023){
 
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
 
           } else if(dimensions.base.query1365){
 
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
 
           } else if(dimensions.base.query1919){
 
             mainFabPosition="absolute";
-            mainFabTop="-25px";
+            mainFabTop="-30px";
             mainFabBottom="unset";
-            mainFabRight="-25px";
+            mainFabRight="5%";
 
           };
 
