--- a/src/elements/guuey-custom-text-input/guuey-custom-text-input.html
+++ b/src/elements/guuey-custom-text-input/guuey-custom-text-input.html
@@ -33,12 +33,12 @@ fieldDisabled(boolean)
         font-size: 24px;
         color:#FFFFFF;
         margin:0px;
-        padding:20px;
+        padding:20px 20px 0px 20px;
       }
       .subHeadingText{
         color:#FFFFFF;
         margin:0px;
-        padding:20px;
+        padding:20px 20px 20px 20px;
       }
       .inputWrapper{
         padding:16px;
