--- a/src/elements/guuey-list-input/guuey-list-input.html
+++ b/src/elements/guuey-list-input/guuey-list-input.html
@@ -44,7 +44,7 @@
       font-size: 24px;
       color:#FFFFFF;
       margin:0px;
-      padding:20px;
+      padding:20px 20px 0px 20px;
       font-size:var(--heading-font-size);
     }
     .subHeadingText{
@@ -52,6 +52,7 @@
       margin:0px;
       padding:20px;
       font-size:var(--sub-heading-font-size);
+      padding:20px 20px 20px 20px;
     }
     .customContainer{
       padding:16px;
