--- a/src/elements/su-header/su-header.html
+++ b/src/elements/su-header/su-header.html
@@ -80,8 +80,6 @@ setimage(boolean)
       .headerAvatar{
         background-color:#9DDEF2;
         background-color: var(--su-header-avatar-background-color);
-        height:150px;
-        width:150px;
         height:var(--header-image-height);
         width:var(--header-image-width);
         margin:0px !important;
@@ -127,33 +125,33 @@ setimage(boolean)
         font-size:var(--patient-name-font-size);
         position:absolute;
         bottom:5%;
-        left:5%;
+        left:20px;
       }
       .pageNameText{
         font-size:16px;
         font-size:var(--page-name-font-size);
         position:absolute;
         bottom:5%;
-        left:5%;
+        left:20px;
       }
       .imageButton{
         position:absolute;
-        right:5%;
-        bottom:5%;
+        right:20px;
+        bottom:20px;
         z-index:2;
         padding:0;
         margin:0;
-        height:20%;
-        width:20%;
+        height:20px;
+        width:20px;
         --guuey-photo-editor-button:{
           opacity:.52;
-        }
+        };
       }
       .headerPrint{
         opacity:.54;
         position:absolute;
-        top:5%;
-        right:5%;
+        top:5px;
+        right:5px;
       }
       .headerProfileImage{
         width:100%;
