--- a/src/pages/care-plan/su-pre/su-pre.html
+++ b/src/pages/care-plan/su-pre/su-pre.html
@@ -63,7 +63,7 @@
         id="header">
       </su-header>
 
-      <div class="pageInnerCont">
+      <div class="pageInnerCont padded">
 
         <!--fab to add a custom field/input-->
         <paper-fab
