--- a/src/pages/care-plan/su-profile/su-profile.html
+++ b/src/pages/care-plan/su-profile/su-profile.html
@@ -53,11 +53,6 @@
         top:0px;
         bottom:0px;
       }
-      .customContainer{
-        width:90%;
-        padding:0px 5% 20px 5%;
-        margin:0px;
-      }
       .inputContainer{
           width:90%;
           margin:0px;
@@ -80,7 +75,7 @@
         setimage>
       </su-header>
 
-      <div class="customContainer">
+      <div class="innerCont padded">
         <div class="sectionContainer">
           <iron-icon icon="social:person-outline"></iron-icon>
 
