--- a/src/my-app-dependencies.html
+++ b/src/my-app-dependencies.html
@@ -36,3 +36,5 @@
 <link rel="import" href="elements/firebase-storage/firebase-storage.html" />
 
 <link rel="import" href="behaviors/shell-resize-behavior.html" />
+
+<link rel="import" href="styles/app-shell-styles.html" />
