--- a/src/pages/default/def-home/def-home.html
+++ b/src/pages/default/def-home/def-home.html
@@ -28,7 +28,7 @@
     <style include="app-grid-style">
     :host{
       --app-grid-columns:5;
-      --app-grid-item-height:150%;
+      --app-grid-item-height:125%;
     }
     .multiBoxContainer{
       margin-top:25px;
@@ -42,7 +42,7 @@
     }
     .suBoxImage{
       width:100%;
-      height:50%;
+      height:70%;
     }
     .suBoxImage:hover{
       cursor:pointer;
@@ -79,7 +79,7 @@
       right:5%;
       top:140px;
       z-index:1;
-      /*polyme overrides*/
+      /*polymer overrides*/
       position:var(--main-fab-position);
       bottom:var(--main-fab-bottom);
       top:var(--main-fab-top);
