updated guuey-custom elements with headers to have correct padding

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -282,7 +282,7 @@
               <paper-icon-button class="toolbarButton" icon="menu" on-tap="toggleDrawer"></paper-icon-button>
               <div class="toolbarInner">
 
-                <div class="searchInput">
+                <div class="mobileSearchInput">
                   <span hidden="[[searchVal]]">
                     <paper-icon-button class="toolbarButton" icon="icons:search"></paper-icon-button>
                   </span>
