--- a/src/styles/app-shell-styles.html
+++ b/src/styles/app-shell-styles.html
@@ -223,6 +223,27 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       transition: box-shadow 0.3s, border 0.3s;
       color:#FFF;
     }
+    .mobileSearchInput{
+      border-radius:20px;
+      border:solid 1px #FFFFFF;
+      background-color:#FFFFFF;
+      opacity:1;
+      padding:5px;
+      display:inline;
+    }
+    .mobileSearchInput input:focus{
+      border:border:solid 1px #FFFFFF;
+      opacity:1;
+      outline:none;
+    }
+    .mobileSearchInput input{
+      background-color:#FFFFFF;
+      border:solid 1px #FFFFFF;
+      opacity:1;
+      width:25%;
+      transition: box-shadow 0.3s, border 0.3s;
+      color:#0e0e0e0e;
+    }
     #searchDropdown{
       margin-top:20px;
       width:100%;
